# libgaudi

./: .gitmodules  CMakeLists.txt  README.md
include/: tribox3.h
include/GaudiGraphics/: TAGS  buffers.hpp  geometry_logger.h  mesh_helper.hpp  profile_logger.h  shaders.hpp  viewer.hpp
include/GaudiMath/: typedefs.h  typedefs.hpp
include/gaudi/: TAGS  common.h  define_create_func.h  geometry_types.hpp  gradients.h  least_squares.h  logger.hpp  sparse_solver.h  tribox_test.hpp  vec_addendum.h
include/gaudi/albers/: circle.hpp  darboux_cyclide.hpp  least_squares.hpp  ncls.hpp  quadric.hpp  sphere.hpp
include/gaudi/arp/: aabb.hpp  arp.h
include/gaudi/asawa/: asawa.h  asset_loader.hpp  datum_x.hpp  datums.hpp  dynamic_surface.hpp  faceloader.hpp  manifold.hpp  objloader_refactor.hpp  primitive_objects.hpp  primitive_operations.hpp  rod.hpp  shell.hpp  shell_operations.hpp
include/gaudi/bontecou/: laplacian.hpp
include/gaudi/calder/: darboux_cyclide_fit.hpp  datums.hpp  harmonic_integrators.hpp  integrators.hpp  least_squares_fit.hpp  quadric_fit.hpp  quadric_integrators.hpp  rod_integrators.hpp  shell_integrators.hpp  tangent_point_integrators.hpp  torus_estimation.hpp  tree_code.hpp  tree_code_old.hpp  weight_functions.hpp
include/gaudi/duchamp/: cross_test.hpp  dynamic_shell_test.hpp  dynamic_surface_test.hpp  fast_summation_test.hpp  gravitys_rainbow.hpp  growth_study.hpp  heat_geodesics_test.hpp  mighty_morphin_test.hpp  reaction_diffusion_test.hpp  rod_constraint_test.hpp  rod_constraints_coupled_test.hpp  rod_constraints_coupled_test_2.hpp  rod_constraints_test.hpp  rod_guided_deformation.hpp  rod_guided_deformation_with_morph.hpp  rods_test.hpp  shell_walk_test.hpp  (+6 more)
include/manifold/: TAGS  add_handle.hpp  affine.hpp  barneshut.hpp  bezier.hpp  bins.hpp  conj_grad.hpp  construct.hpp  convex_hull.hpp  coordinate_interface.hpp  diffuse.hpp  edge_point_subdividers.hpp  fdt.hpp  geometry_types.hpp  graph_skinning.hpp  harmonic_integrators.hpp  laplacian.hpp  m1Construct.hpp  m1Includes.h  m1Spring.hpp  m2.hpp  m2Includes.h  m2Mod.hpp  m2Operators.h  m2Spring.hpp  make.hpp  manifold_singleton.h  meshHandler.hpp  modify.hpp  movingMesh.hpp  moving_mesh.hpp  objloader.hpp  octree.hpp  position_optimization.hpp  remesh.hpp  subdivide.hpp  surface_calculator.hpp  surface_filters.hpp  trace.hpp  tree_code.hpp  (+3 more)
include/nanoguihelpers/: buffers.hpp
include/quartic/: cubic.hpp
include/zither/: buffer.hpp  graph.hpp
notebooks/: RxDiffEigenVals.ipynb  darboux_cyclides.ipynb  nbody_optimization.ipynb  sin_opt.ipynb  thin_shells.ipynb
proj/: include.mk  include.mk~
proj/arpTest/: Makefile  arpTest.cpp  arpTest.cpp~
proj/gnomon/: Makefile~  gnomon.cpp  trackball.hpp~
proj/graphTest/: #main.cpp#  Makefile  Makefile~  main.cpp~
proj/hello/: Makefile~  buffers.hpp~  hello.cpp~
projects/: include.mk
projects/aabb_test/: main.cpp
projects/arpTest/: arpTest.cpp
projects/bending/: CMakeLists.txt  main.cpp
projects/blank_template/: CMakeLists.txt  main.cpp
projects/calder_test/: CMakeLists.txt  main.cpp
projects/cross_test/: CMakeLists.txt  main.cpp
projects/dynamic_shell_test/: CMakeLists.txt  main.cpp
projects/dynamic_surface_test/: CMakeLists.txt  main.cpp
projects/facemergetest/: CMakeLists.txt  main.cpp
projects/fast_summation_test/: CMakeLists.txt  main.cpp
projects/foo_hello/: buffers.hpp  hello.cpp
projects/graphTest/: main.cpp
projects/gravitys_rainbow/: CMakeLists.txt  main.cpp
projects/growth_study/: CMakeLists.txt  main.cpp
projects/heat_geodesics_test/: CMakeLists.txt  main.cpp
projects/hello/: CMakeLists.txt  main.cpp
projects/hello_manifold/: CMakeLists.txt  buffers.hpp  main.cpp
projects/m2refactor/: CMakeLists.txt  main.cpp
projects/mighty_morphin_test/: CMakeLists.txt  main.cpp
projects/nearestpoint/: CMakeLists.txt  main.cpp
projects/physarym/: CMakeLists.txt  main.cpp
projects/reaction_diffusion_test/: CMakeLists.txt  main.cpp
projects/rmedge/: CMakeLists.txt  main.cpp
projects/rod_constraint_test/: CMakeLists.txt  main.cpp
projects/rod_constraints_coupled_test/: CMakeLists.txt  main.cpp
projects/rod_constraints_test/: CMakeLists.txt  main.cpp
projects/rod_guided_deformation/: CMakeLists.txt  main.cpp
projects/rods_test/: CMakeLists.txt  main.cpp
projects/rxdiff/: CMakeLists.txt  main.cpp
projects/sdftest/: CMakeLists.txt  main.cpp
projects/shell_constraints_align_test/: CMakeLists.txt  main.cpp
projects/shell_constraints_test/: CMakeLists.txt  main.cpp
projects/shell_normal_constraints/: CMakeLists.txt  main.cpp
projects/shell_walk_test/: CMakeLists.txt  main.cpp
projects/spectratest/: CMakeLists.txt  main.cpp
projects/stretch/: CMakeLists.txt  main.cpp
projects/tangent_point_test/: CMakeLists.txt  main.cpp
projects/tanvec/: CMakeLists.txt  main.cpp
projects/vortex_test/: CMakeLists.txt  main.cpp
projects/vortextest/: CMakeLists.txt  main.cpp
projects/wav2fft/: CMakeLists.txt  main.cpp
projects/zithertest/: CMakeLists.txt
src/: CMakeLists.txt  SIMPLE_PARSER.cpp  SIMPLE_PARSER.h  TIMER.cpp  TIMER.h  nanoguiincludes.h  nanoguiincludes.h~  tribox3.h~
src/GaudiGraphics/: geometry_logger.cpp  profile_logger.cpp
src/manifold/: TAGS  add_handle.hpp  add_handle.hpp~  bezier.hpp~  bins.hpp  construct.hpp  construct.hpp~  convex_hull.hpp  debugger.cpp  debugger.cpp~  debugger.h  debugger.h~  edge_point_subdividers.hpp  edge_point_subdividers.hpp~  fdt.hpp  fdt.hpp~  geometry_types.hpp~  graph_skinning.hpp  graph_skinning.hpp~  heap.hpp  heap.hpp~  m1.hpp  m1.hpp~  m1Construct.hpp  m2.hpp  m2.hpp~  m2Dense.h  m2Includes.h  m2Includes.h~  m2Mod.hpp  m2Spring.hpp  make.hpp  make.hpp~  manifold_singleton.cpp  meshHandler.hpp~  modify.hpp  modify.hpp~  movingMesh.hpp  movingMesh.hpp~  nearest_point.hpp  (+10 more)
src/manifold/attic/: m2Common.hpp  m2Control.hpp  m2Edge.hpp
src/quartic/: quadratic.hpp  quartic.cpp  quartic_ferrari.hpp
src/shaders/: standard.fs  standard.fs~  standard.vs  standard.vs~
src/zither/: #buffer.hpp#  #graph.hpp#  buffer.hpp~  graph.hpp  graph.hpp~
(+100 files in other folders)
